# pickup_winder

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt  Pico - Visual Studio Code.lnk
src/Display/: CMakeLists.txt
src/Display/Config/: DEV_Config.h
src/Display/Fonts/: CMakeLists.txt  fonts.h
src/Display/GUI/: CMakeLists.txt  GUI_Paint.c  GUI_Paint.h
src/Display/test/: LCD_2in_test.c  LCD_Test.h
src/control_lib/: CMakeLists.txt  control.c  control.h  control_test.c  filter.c  filter.h  limit.c  limit.h  math_constants.h
src/counter_lib/: CMakeLists.txt  counter.c  counter.h  counter_test.c
src/display_lib/: CMakeLists.txt  display.c  display.h  display_test.c
src/encoder_lib/: CMakeLists.txt  encoder.c  encoder.h  encoder_test.c
src/filter_lib/: CMakeLists.txt  filter.c  filter.h  filter_test.c
src/motor_lib/: CMakeLists.txt  motor.c  motor.h  motor_test.c
